<resources>
    <string name="app_name">MonnifySDK</string>
    <string name="back_to_merchant">Back to Merchant</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="total">Total</string>
    <string name="select_a_payment_method">Select a Payment Method</string>
    <string name="continue_">Continue</string>
    <string name="check_transaction_status">Check transaction status</string>
    <string name="checking_transaction_status">Checking transaction status…</string>
    <string name="bank_transfer_message">Use your Internet/Mobile Banking platform from your bank to pay into this account</string>
    <string name="qr_code_message">Scan the QR Code below with your mobile banking app to complete the payment</string>
    <string name="otp_message">An OTP has been sent to your phone number. \nEnter the OTP to complete this transactionDetails</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="enter_card_pin">Enter Card PIN</string>
    <string name="powered_by_">Powered by</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="card_title">Pay with Card</string>
    <string name="bank_transfer_title">Pay with Bank Transfer</string>
    <string name="qr_code_title">Pay with QR-Code</string>
    <string name="ussd_title">Pay with USSD</string>
    <string name="card_subtitle">Payment with Debit Card</string>
    <string name="bank_transfer_subtitle">Transfer to a merchant\'s account</string>
    <string name="qr_code_subtitle">Scan a QR-code to complete payment</string>
    <string name="ussd_subtitle">Use your bank\'s USSD code to pay</string>
    <string name="test_mode">TEST MODE</string>
    <string name="not_valid">Input is Invalid</string>
    <string name="invalid_card_number">Invalid card number</string>
    <string name="invalid_expiry_date">Invalid expiry date</string>
    <string name="invalid_cvv">Invalid cvv</string>
    <string name="processing_transaction_ellipse">Processing Transaction . . .</string>
    <string name="processing_transaction">Processing Transaction</string>
	<string name="select_a_test_card">Select a test card</string>
    <string name="account_number">Account Number</string>
    <string name="bank">Bank</string>
    <string name="name">Name</string>
    <string name="account_name">Account Name</string>
    <string name="pay_via_ussd">Pay via USSD</string>
    <string name="dial_this_code">Dial this code (Tap to copy)</string>
    <string name="dial_code">Dial Code</string>
    <string name="copied">Copied</string>
    <string name="cvv_tool_tip_text">3 digits at the back of your card</string>
    <string name="select_bank">Select bank</string>
    <string name="select_your_bank">Select your bank</string>
    <string name="loading_payment_methods">Loading allowed payment methods…</string>
    <string name="initializing_transaction">Initializing Transaction…</string>
	<string name="transaction_success">Transaction Success!</string>
    <string name="transaction_failed">Transaction Failed!</string>
    <string name="transaction_pending">Transaction Pending</string>
    <string name="transaction_successful">Transaction Successful!</string>
	<string name="transaction_pending_description">Transaction pending</string>
    <string name="transaction_failed_description">Transaction unable to be completed</string>
    <string name="transaction_successful_description">Your payment of %s was successful. We\'ve sent a receipt of this
        transaction to your email.</string>
    <string name="partial_payment_description">Your partial payment of %s was successful. We\'ve sent a receipt of this
        transaction to your email.</string>
    <string name="over_payment_description">Your payment of %1$s was successful. We\'ve sent a receipt of this
        transaction to your email. Your overpaid balance of %2$s. will be refunded.</string>
	<string name="returning_to_merchant_in_some_seconds">Returning to merchant in %d</string>
    <string name="waiting_for_otp_auth">Authenticating OTP</string>
    <string name="waiting_for_secure_3d_auth">Waiting for secure 3D authentication</string>
	<string name="empty_string" />
    <string name="retry_with_another_payment_method">Retry with another payment method</string>
	<string name="secure_thread_message">Please confirm payment. (Pinch to zoom if content is too tiny)</string>

    <string name="stomp_disconnect">We\'re having connection issues, please check your internet connection.</string>
    <string name="verifying_transaction_status">Verifying payment status</string>
    <string name="mm_yy">e.g 12/22</string>
    <string name="e_g_999">e.g 999</string>
    <string name="otp">OTP</string>
    <string name="please_wait">Please Wait</string>
    <string name="card_number_placeholder">e.g 5399 0000 1234 9876</string>
    <string name="otp_has_been_sent">An OTP has been sent to your phone number/email. \nEnter the OTP to complete this transaction.</string>


    <!--    -->

    <string name="test">TEST</string>
    <string name="hint_merchant_name">Cakes &amp; Bakes Limited</string>
    <string name="hint_customer_name">CUSTOMER NAME</string>
    <string name="hint_customer_email">CUSTOMER EMAIL ADDRESS</string>
    <string name="cancel">CANCEL</string>
    <string name="close_cap">CLOSE</string>
    <string name="amount_to_be_paid">AMOUNT TO BE PAID</string>
    <string name="amount_to_pay">Amount to pay</string>
    <string name="placeholder_amount">₦250,510.00</string>
    <string name="default_amount">₦0.00</string>
    <string name="amount">Amount</string>
    <string name="fee">Fee</string>
    <string name="powered_by">Powered By</string>
    <string name="secured_by">Secured by</string>
    <string name="select_payment_method">SELECT PAYMENT METHOD</string>
    <string name="pay_with_card">Pay with Card</string>
    <string name="pay_with_transfer">Pay with Transfer</string>
    <string name="pay_with_bank">Pay with Bank</string>
    <string name="pay_with_nqr">Pay with NQR</string>
    <string name="pay_with_ussd">Pay with USSD</string>
    <string name="pay_with_cash">Pay with Cash</string>
    <string name="pay_with_phone">Pay with Phone No.</string>
    <string name="change">Change</string>
    <string name="pay_with_transfer_info">Transfer instantly with your Internet/Mobile Banking platform or USSD to this account number</string>
    <string name="dail_the_code">Dail the Code</string>
    <string name="click_to_copy_code">Click to copy code</string>
    <string name="transferred_money">I’ve transferred the money</string>
    <string name="get_bank_ussd_code">Get your banks USSD code</string>
    <string name="enter_your_card_details">Enter your card details</string>
    <string name="please_enter_card_pin_to_authorize_this_payment">Please enter card PIN to authorize this payment</string>
    <string name="continue_string">Continue</string>
    <string name="an_otp_has_been_sent">An OTP has been sent to your phone number.\n Enter it to complete this payment</string>
    <string name="an_otp_has_been_sent_phone_number">An OTP has been sent to your phone number.</string>
    <string name="enter_it_to_complete_this_payment">Enter it to complete this payment</string>
    <string name="indicator_prefix">EXPIRES IN</string>
    <string name="account_expires_in">Account expires in</string>
    <string name="checking_for_payment">Checking for payment</string>
    <string name="select_your_bank_to_begin_payment">Select your bank to begin payment</string>
    <string name="dial_the_code_below_on_the_your_mobile_phone_to_complete_the_payment">Dial the code below on the your mobile phone to complete the payment</string>
    <string name="enter_your_phone_number_to_begin_payment">Enter your phone number to begin payment</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="hint_placeholder">Hint Placeholder</string>
    <string name="content_placeholder">Content Placeholder</string>
    <string name="invalid_input">Invalid input</string>
    <string name="i_have_made_this_payment">I\'ve made this payment</string>
    <string name="i_have_completed_this_payment">I\'ve completed this payment</string>
    <string name="kindly_check_your_phone_you_ll_receive_a_prompt_to_complete_payment">Kindly check your phone. You\'ll receive a prompt to complete payment.</string>
    <string name="waiting_for_authorization">waiting for authorization</string>
    <string name="provide_the_following_details">Provide the following details</string>
    <string name="verify_account">Verify account</string>
    <string name="verifying_account">Verifying account</string>
    <string name="validating_details">Validating details</string>
    <string name="validate_details">Validate details</string>
    <string name="confirm">Confirm</string>
    <string name="confirming">Confirming</string>
    <string name="proceed">Proceed</string>
    <string name="proceeding">Proceeding</string>
    <string name="start_over">Start over</string>
    <string name="go_back">Go back</string>
    <string name="an_otp_has_been_sent_to_your_phone_number_enter_it_to_complete_this_payment">An OTP has been sent to your phone \nnumber. Enter it to complete this payment</string>
    <string name="loading">Loading</string>
    <string name="enter_bvn">Enter BVN</string>
    <string name="bvn">BVN</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string name="transaction_status">Transaction %1$s!</string>
    <string name="transaction_status_message">Your payment of %1$s was\n%2$s. We\’ve sent a receipt of this\ntransaction to your email.</string>
    <string name="try_again_with_the_same_card">Try again with the same card</string>
    <string name="try_again_another_card">Try again another card</string>
    <string name="try_again_with_transfer">Try again with Transfer</string>
    <string name="try_again_with_ussd">Try again with USSD</string>
    <string name="try_again_with_bank">Try again with Bank</string>
    <string name="try_again_with_phone_number">Try again with Phone number</string>
    <string name="pay_with_other_methods">Pay with other methods</string>
    <string name="select_another_bank">Select another bank</string>
    <string name="copy_ussd_code">Copy USSD code</string>
    <string name="your_cvv_is_the_3_digit_number_on_the_back_of_your_card"><![CDATA[Your CVV is the <b>3 digit number</b><br>non the back of your card]]></string>
    <string name="please_do_not_save_this_account_number">Please DO NOT save this account number. The account is for a one-time use.</string>
</resources>